Add Db Context and connection string

--- a/lab9/appsettings.json
+++ b/lab9/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Lab10Context": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=Lab10Shop;Integrated Security=True"
+  }
 }
