Add database, update Articles views and controllers

--- a/lab9/appsettings.json
+++ b/lab9/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Lab10Context": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=Lab10Shop;Integrated Security=True"
+    "Lab10Context": "Data Source=Lab10Shop.db"
   }
 }
